# AULA_8-BOOTCAMP-PYTHON

./: .gitignore  README.md  dados.csv  dados.parquet  etl.py  pipeline.py  pyproject.toml
data/: coleta_dia01.json  coleta_dia02.json  coleta_dia03.json
